documentation/versioned_docs/version-4.x/examples/cad-styling-nodes.mdx
---
id: cad-styling-nodes
title: Filtering nodes by node ID or properties
describe: Applying styles to nodes based on node IDs or properties/attributes
---

import { DemoWrapper } from '@site/versioned_docs/version-4.x/components/DemoWrapper';

3D nodes may have associated attribute/property data. Reveal allows for filtering based on
these properties, allowing queries such as "all pipes", "nodes within module P600" or "nodes
with status S5". Combinations are also possible by using `UnionNodeCollection` and `IntersectionNodeCollection`.

`NodeIdNodeCollection` contains a list of nodes identified by their CDF IDs.

`PropertyFilterNodeCollection` is used to query nodes based on node properties. It's possible to specify
multiple criterias which will be combined using `AND` - i.e. all criterias must be met for a node
to match. To emulate `OR`, use `UnionNodeCollection`.

`SinglePropertyFilterNodeCollection` is similar to `PropertyFilterNodeCollection`, but differs in that
it only matches on a single node property and is able to match on a list of values. This is useful
to e.g. provide a list of node names or source system IDs.

Note that if a node is in one of the collections discussed in this page, all of its children will also
be in the set.

:::note
The test model used in the documentation site is lacking good node properties and the quality of
the examples shown is therefor restricted as a result of this. To best utilize the filtering APIs
we recommend providing a rich 3D models with a good set of high-quality attributes associated with
the nodes.
:::

<DemoWrapper />

## Highlight nodes identified by IDs

If Node IDs are known, `NodeIdNodeCollection` can be used to style the nodes (and the children):

```js runnable-4x
// import { NodeIdNodeCollection, DefaultNodeAppearance } from '@cognite/reveal';

const nodes = new NodeIdNodeCollection(sdk, model);
const nodeIds = [
  6790526732893790, 8491891944656383, 1408134070691933, 7215972602029446,
]; // Life boats
nodes.executeFilter(nodeIds);
model.assignStyledNodeCollection(nodes, DefaultNodeAppearance.Highlighted);
```

## Show all pipes

If nodes in the 3D model has an attribute `'PDMS.Type'`, `PropertyFilterNodeCollection` can be used to
retrieve nodes of a certain type. In the following example, only pipes are accepted:

```js runnable-4x
// import { PropertyFilterNodeCollection, DefaultNodeAppearance } from '@cognite/reveal';

const allPipes = new PropertyFilterNodeCollection(sdk, model);
allPipes.executeFilter({ PDMS: { Type: 'PIPE' } });
model.setDefaultNodeAppearance(DefaultNodeAppearance.Ghosted);
model.assignStyledNodeCollection(allPipes, {
  renderGhosted: false,
  color: new THREE.Color(0.15, 0.8, 0.08),
});
```

## Partitioning requests

For filters that match a lot of nodes, [paritioned requests](https://docs.cognite.com/api/v1/#section/Parallel-retrieval)
might increase the performance radically by fetching result from the server in parallel.
To partition requests, provide the number of partitions using the `requestPartitions`-option
to the `PropertyFilterNodeCollection`-constructor:

```js runnable-4x
// import { PropertyFilterNodeCollection, DefaultNodeAppearance, NodeOutlineColor } from '@cognite/reveal';

const nodesFromFile = new PropertyFilterNodeCollection(sdk, model, {
  requestPartitions: 10,
});
// All nodes originating from a given file
nodesFromFile.executeFilter({ Item: { 'Source File': 'PRO-S_CD-MUM.nwd' } });
model.setDefaultNodeAppearance(DefaultNodeAppearance.Ghosted);
model.assignStyledNodeCollection(nodesFromFile, {
  renderGhosted: false,
  outlineColor: NodeOutlineColor.Orange,
});
```

To compare speed-up, set `requestPartitions` to `1`.

## Combining filters

Often one would want to match multiple criterias of the same type. Lets say we want to find all
mechanical equipment with purpose 'STU'. We can either execute this as a single query, or as two
seperate queries.

When doing this as a single query, no `IntersectionNodeCollection` is necessary and the code is quite compact:

```js runnable-4x
// import { PropertyFilterNodeCollection, DefaultNodeAppearance } from '@cognite/reveal';

const stuMechNodes = new PropertyFilterNodeCollection(sdk, model);
stuMechNodes.executeFilter({ PDMS: { ':capDisc': 'MECH', Purpose: 'STU' } });

model.setDefaultNodeAppearance(DefaultNodeAppearance.Ghosted);
model.assignStyledNodeCollection(stuMechNodes, {
  renderGhosted: false,
  color: new THREE.Color(0.15, 0.8, 0.08),
});
```

Combining two separate queries requires the use of `IntersectionNodeCollection`:

```js runnable-4x
// import { PropertyFilterNodeCollection, IntersectionNodeCollection, DefaultNodeAppearance } from '@cognite/reveal';

const mechNodes = new PropertyFilterNodeCollection(sdk, model);
mechNodes.executeFilter({ PDMS: { ':capDisc': 'MECH' } });

const stuNodes = new PropertyFilterNodeCollection(sdk, model);
stuNodes.executeFilter({ PDMS: { Purpose: 'STU' } });

const combined = new IntersectionNodeCollection();
combined.add(mechNodes);
combined.add(stuNodes);

model.setDefaultNodeAppearance(DefaultNodeAppearance.Ghosted);
model.assignStyledNodeCollection(combined, {
  renderGhosted: false,
  color: new THREE.Color(0.15, 0.8, 0.08),
});
```

The two approaches has their pros and cons. Often it will be faster to combine the
filters into a single query as this will reduce the result set returned from the
server. However, if the different combinations will be configured run-time (e.g.
the user will want to show 'ARCH'-nodes within the 'STU'-purpose) it might
be better to use two separate queries and combine the results. Also, the latter
approach also allows for more complex types of filters.

## Matching nodes with a list of values

There might be situations where an application has a long list of identifiers of nodes to show
or style. In this case, `SinglePropertyFilterNodeCollection` might be useful. This class will match
one node property towards many values - e.g. a node identifier towards a list of IDs. This node set
supports thousands of IDs - `PropertyFilterNodeCollection` only supports one matching value.

```js runnable-4x
// import { SinglePropertyFilterNodeCollection, DefaultNodeAppearance } from '@cognite/reveal';

const nodeSet = new SinglePropertyFilterNodeCollection(sdk, model, {
  requestPartitions: 10,
});
const names = [];
for (let q = 200; q < 300; q++) {
  for (let e = 1; e <= 9; e++) {
    const name = `/60-EL-9016-Q${q}-E0${e}`;
    names.push(name);
  }
}
model.setDefaultNodeAppearance(DefaultNodeAppearance.Ghosted);
model.assignStyledNodeCollection(nodeSet, {
  renderGhosted: false,
  outlineColor: NodeOutlineColor.Orange,
});

nodeSet.executeFilter('Item', 'Name', names).then(() => {
  // Create boxes around the areas to make it easier for users to find areas in the 3D model to explore
  const areas = Array.from(nodeSet.getAreas().areas());
  for (const area of areas) {
    viewer.addObject3D(new THREE.Box3Helper(area));
  }
});
```

## Inverting and combining filters

Often it is interesting to invert results from filters to find elements that does not match the query. This
can be done using `InvertedNodeCollection`. In the following example, a single system is isolated
and all pipe support for the system is hidden.

```js runnable-4x
// import {
//   PropertyFilterNodeCollection,
//   InvertedNodeCollection,
//   IntersectionNodeCollection,
//   DefaultNodeAppearance
// } from '@cognite/reveal';

const fullSystem = new PropertyFilterNodeCollection(sdk, model);
fullSystem.executeFilter({ Item: { Name: '/P/WM/A' } });
const pipeSupport = new PropertyFilterNodeCollection(sdk, model);
pipeSupport.executeFilter({ Item: { Name: '/P/WM/A/PS' } });
// This will contain all nodes that do not match the query above
const notPipesupport = new InvertedNodeCollection(model, pipeSupport);
const systemWithoutPipesupport = new IntersectionNodeCollection([
  fullSystem,
  notPipesupport,
]);

model.setDefaultNodeAppearance(DefaultNodeAppearance.Hidden);
model.assignStyledNodeCollection(
  systemWithoutPipesupport,
  DefaultNodeAppearance.Default
);
```
